<resources>
    <string name="app_name">DisasterAlert</string>

    <string name="filter_item_dummy">Flood</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="search_hint">Enter province name</string>
    <string name="bottom_sheet_title">Informasi Bencana Terkini</string>
    <string name="disaster_time_dummy">2016-12-09</string>
    <string name="no_data">There is no data</string>
    <string name="disaster_place_dummy">Jawa Tengah</string>
    <string name="filter_disaster_by_period">Filter Disaster by Period</string>
    <string name="start_date_title">Start Date</string>
    <string name="end_date_title">End Date</string>
    <string name="province_title">Province Name</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="remove_filter">Remove Filter</string>
    <string name="disaster_flood">Flood</string>
    <string name="disaster_earthquake">Earthquake</string>
    <string name="disaster_fire">Fire</string>
    <string name="disaster_haze">Haze</string>
    <string name="disaster_wind">Wind</string>
    <string name="disaster_volcano">volcano</string>
    <string name="push_notification">Push Notification</string>
</resources>