<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.FilterFragment"
    android:layout_margin="@dimen/dimen_16dp"
    app:cardCornerRadius="@dimen/dimen_16dp"
    app:cardElevation="@dimen/dimen_16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_16dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_disaster_by_period"
            android:textSize="@dimen/dimen_18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/btn_start_date"
            app:layout_constraintStart_toEndOf="@+id/btn_start_date"
            app:layout_constraintTop_toTopOf="@+id/btn_start_date"
            android:layout_marginStart="@dimen/dimen_12dp"/>

        <TextView
            android:id="@+id/tv_start_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:text="@string/start_date_title"
            android:layout_marginTop="@dimen/dimen_24dp"/>

        <ImageButton
            android:id="@+id/btn_start_date"
            style="@style/Base.Widget.AppCompat.ImageButton"
            android:layout_width="@dimen/dimen_48dp"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_date_range_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_start_date_title" />

        <TextView
            android:id="@+id/tv_end_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_start_date"
            android:text="@string/end_date_title"
            android:layout_marginTop="@dimen/dimen_8dp"/>

        <TextView
            android:id="@+id/tv_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_12dp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_end_date"
            app:layout_constraintStart_toEndOf="@+id/btn_end_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_end_date_title" />

        <ImageButton
            android:id="@+id/btn_end_date"
            style="@style/Base.Widget.AppCompat.ImageButton"
            android:layout_width="@dimen/dimen_48dp"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_date_range_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_end_date_title" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/province_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_end_date"
            android:layout_marginTop="@dimen/dimen_8dp"/>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/sv_search_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:queryHint="@string/search_hint"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:background="@drawable/filter_search_outline"
            android:layout_marginHorizontal="@dimen/dimen_8dp"/>

        <ListView
            android:id="@+id/lv_suggestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sv_search_location"
            android:layout_marginHorizontal="@dimen/dimen_8dp"
            android:maxHeight="@dimen/dimen_256dp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lv_suggestion"
            android:layout_marginTop="@dimen/dimen_8dp">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btn_apply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/apply" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>