<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv_disaster_item"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/dimen_12dp"
    app:cardCornerRadius="@dimen/dimen_12dp"
    app:cardElevation="@dimen/dimen_12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_disaster_image"
            android:layout_width="84dp"
            android:layout_height="84dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/iv_disaster_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_disaster_image"
            app:layout_constraintTop_toTopOf="@+id/iv_disaster_image">

            <TextView
                android:id="@+id/tv_disaster_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                tools:text="@string/filter_item_dummy"
                android:textSize="@dimen/dimen_18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_disaster_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8dp"
                tools:text="@string/disaster_place_dummy"
                android:textSize="@dimen/dimen_12sp"/>

            <TextView
                android:id="@+id/tv_disaster_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8dp"
                tools:text="@string/disaster_time_dummy"
                android:textSize="@dimen/dimen_12sp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>